5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1573_2896.log
== TEST (2019-03-13 14:22:26) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var =input("Digite o nome: Hannah") 

#print(var)
print()
-- OUTPUT:
***** 
(* o o *) 
 * ^ * 
 * --- * 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:23:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var =input(Hannah) 

#print(var)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var =input(Hannah) 
NameError: name 'Hannah' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:24:28) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var =input("Digite o nome: Hannah") 

#print(var)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var =input(Hannah) 
NameError: name 'Hannah' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:24:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var =input("Digite o nome: Hannah") 

#print(var)
print()
-- EXECUTION TIME:
0.133963
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 13:46:57) 
-- CODE:
# Hannah

# Leitura de valores de entrada
var =input("Digite o nome: Hannah") 

#print(var)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var =input(Hannah) 
NameError: name 'Hannah' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 13:47:05) 
-- CODE:
# Hannah

# Leitura de valores de entrada
var =input("Digite o nome: Hannah") 

#print(var)
print()
-- EXECUTION TIME:
0.189702
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 13:47:22) 
-- CODE:
# Hannah

# Leitura de valores de entrada
var =input("Hannah") 

#print(var)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var =input(Hannah) 
NameError: name 'Hannah' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 13:47:24) 
-- CODE:
# Hannah

# Leitura de valores de entrada
var =input("Hannah") 

#print(var)
print()
-- EXECUTION TIME:
0.190351
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 13:47:39) 
-- CODE:
# Hannah

# Leitura de valores de entrada
var =input("Hannah") 

#print(var)
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 13:47:43) 
-- CODE:
# Hannah

# Leitura de valores de entrada
var =input("Hannah") 

#print(var)
print(var)
-- EXECUTION TIME:
0.268827
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
